--- a/media.css
+++ b/media.css
@@ -56,8 +56,7 @@
     gap: 2rem;
   }
   .home-detail-header h1,
-  .home-detail-header h2,
-  .home-detail p {
+  .home-detail-header h2 {
     text-align: center;
   }
   @keyframes slidein {
