--- a/media.css
+++ b/media.css
@@ -56,28 +56,35 @@
     gap: 2rem;
   }
   .home-detail-header h1,
-  .home-detail-header h2 {
+  .home-detail-header h2,
+  .home-detail p {
     text-align: center;
+  }
+  .home-detail p{
+    hyphens: auto;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    text-align: justify;
   }
   @keyframes slidein {
     100% {
       right: 0;
     }
   }
-  .home-detail .download-social{
+  .home-detail .download-social {
     margin-top: 2rem;
     align-items: center;
     justify-content: center;
     padding: auto;
   }
 }
-@media screen and (max-width: 410px){
-  .home-detail .download-social{
+@media screen and (max-width: 410px) {
+  .home-detail .download-social {
     flex-direction: column;
     gap: 2rem;
     margin-top: 2rem;
   }
-  .home-detail .social-icons{
+  .home-detail .social-icons {
     margin-left: 0;
   }
 }
