--- a/style.css
+++ b/style.css
@@ -6,18 +6,17 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-html,body {
-  height: calc(var(--vh, 1vh) * 100);
+body {
   background: url("./Assets/background.jpg") no-repeat center / cover;
-  overflow: hidden;
+  backdrop-filter: blur(3rem);
+  background-color: rgb(255, 255, 255, 0.6);
+  min-height: 100vh;
+  height: 100%;
+}
+html,body{
+  overflow-x: hidden;
 }
 
-.container {
-  position: relative;
-  height: 100%;
-  background-color: rgb(255, 255, 255, 0.1);
-  backdrop-filter: blur(2rem);
-}
 
 header {
   position: absolute;
@@ -86,9 +85,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
+  height: 100vh;
   gap: 3.5rem;
-  padding: 3.3rem 5% 0;
+  padding: 3.75rem 5% 0;
   color: #fff;
 }
 
@@ -167,101 +166,7 @@ header {
   width: 100%;
 }
 
-.contact {
-  display: flex;
-  align-items: center;
-  gap: 3.5rem;
-  padding: 3.3rem 5% 0;
-  color: #fff;
-}
-.contact-container {
-  display: grid;
-  grid-template-columns: 1fr 1.3fr;
-  gap: 3rem;
-}
-.contact-container .contact-box:first-child {
-  align-self: center;
-}
-.contact-box h2{
-  font-weight: 700;
-  font-size: 1.7rem;
-}
-.contact-box p{
-  font-size: 0.9rem;
-}
-.contact-box .desc{
-  margin: 1.2rem 0 2rem;
-}
-.contact-box .contact-detail{
-  display: flex;
-  align-items: center;
-  margin: 0.2rem 0;
-}
-.contact-detail i{
-  display: inline-flex;
-  color: #333;
-  font-size: 1.4rem;
-  padding: 0.5rem;
-  border-radius: 1.5rem;
-  margin-right: 0.8rem;
-  background: #fff;
-  cursor: pointer;
-  transition: .5s;
-}
-.contact-detail i:hover{
-  background: none;
-  box-shadow: 0 0 4px #fff;
-  color: #fff;
-}
-.contact-detail .detail p:first-child{
-  color: #fff;
-  font-size: 0.9rem;
-  font-weight: 800;
-}
-.contact-box form{
-  background: none;
-  padding: 1rem 0 1rem;
-  border-radius: 1rem;
-  text-align: center;
-}
-.contact-box .heading{
-  font-size: 2.5rem;
-}
-span{
-  color: #7a04eb;
 
-}
-.contact-box .field-box{
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-  gap: 1rem;
-}
-.contact-box .field-box input,
-.contact-box .field-box textarea{
-  padding: 0.6rem;
-  background: none;
-  border: 2px solid #fff;
-  border-radius: .3rem;
-  font-size: .9rem;
-  color: #fff;
-
-}
-.contact-box .field-box textarea{
-  grid-column: 1/-1;
-  height: 7rem;
-  resize: none;
-}
-.contact-box .field-box input:focus,
-.contact-box .field-box textarea:focus{
-  border: 2px solid #7a04eb;
-  box-shadow: 0.1rem 0.1rem 0.2rem #7a04eb;
-  color: #fff;
-  outline: none;
-}
-.contact-box .btn{
-  margin-top: 2rem;
-  cursor: pointer;
-}
 .section{
   display: none;
 }
@@ -334,4 +239,3 @@ span{
     opacity: 1;
   }
 }
-
