--- a/media.css
+++ b/media.css
@@ -1,8 +1,4 @@
-@media screen and (max-width: 850px) {
-  header {
-    position: fixed;
-  }
-
+@media screen and (max-width: 992px) {
   .menu-toggle {
     display: block;
   }
@@ -54,21 +50,23 @@
   .home {
     flex-direction: column-reverse;
     height: fit-content;
-    padding-top: 5.5rem;
     margin: 0;
     align-items: center;
     gap: 2rem;
   }
-  .home-detail-header h1,
-  .home-detail-header h2,
-  .home-detail p {
-    text-align: center;
+
+  .home-detail-header h1 {
+    font-size: clamp(2.2rem, 12vw, 3.2rem);
   }
   .home-detail p {
-    hyphens: auto;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    text-align: justify;
+    max-width: 500px;
+    line-height: 1.3;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 1rem;
+    hyphens: none;
+    word-wrap: normal;
+    overflow-wrap: normal;
   }
   @keyframes slidein {
     100% {
@@ -81,12 +79,14 @@
     justify-content: center;
     padding: auto;
   }
+  .section {
+    min-height: auto;
+  }
 }
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 576px) {
   .home-detail .download-social {
     flex-direction: column;
-    gap: 2rem;
-    margin-top: 1.4rem;
+    gap: 1rem;
   }
   .home-detail .social-icons {
     margin-left: 0;
